fix contrast and nav ar keyboard accessibility

--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@
   }
 
   .logo a{
-    color: white;
+    color: #fff;
     margin-left: 20px;
     font-weight: 700;
     font-size: 18px;
@@ -53,6 +53,7 @@
     margin-left: 30px;
   }
 
+  
 
   .headline-section {
     background-color: #1C1A19;
@@ -182,7 +183,7 @@ padding: 10px 20px;
 
 .btn {
     padding: 12px;
-    background: #FF6B00;
+    background: #6b2d01;
     border: none;
     margin-top: 10px ;
     font-family: 'Inter', sans-serif;
@@ -191,7 +192,7 @@ padding: 10px 20px;
     line-height: 24px;
     text-align: center;
     letter-spacing: 0.03em;
-    color: #fff;
+    color: rgb(255, 238, 238);
     cursor: pointer;
     
   }
@@ -214,14 +215,14 @@ padding: 10px 20px;
   line-height: 24px;
   letter-spacing: 0.03em;
   color: #F55800;
-  background: #FFF5E1;
+  background: #fff;
   border: 1px solid #F55800;
   animation-duration: 2s;
     animation-name: btngrow;
   }
   
   .btn:active {
-    background: #E05304;
+    background: #6b2d01;
     color: #fff;
     font-family: 'Inter', sans-serif;
 font-weight: 700;
@@ -328,7 +329,7 @@ letter-spacing: 0.03em;
     font-weight: 400;
     font-size: 32px;
     line-height: 44px;
-    color: #fff;
+    /* color: #fff; */
 }
 
 .project-desc {
@@ -337,7 +338,7 @@ letter-spacing: 0.03em;
     font-weight: 400;
     font-size: 16px;
     line-height: 24px;
-    color: #fff;
+    /* color: #fff; */
 
 }
 
@@ -354,7 +355,7 @@ letter-spacing: 0.03em;
     font-weight: 500;
     font-size: 15px;
     line-height: 20px;
-    color: #fff;
+    /* color: #fff; */
     padding: 10px;
     align-items: flex-end;
     margin-bottom: 10px;
@@ -364,7 +365,7 @@ letter-spacing: 0.03em;
 
   .check-project {
 padding: 10px 20px;
-background: #FF6B00;
+background: #a04402;
 font-family: 'Inter', sans-serif;
 font-style: normal;
 font-weight: 700;
@@ -635,6 +636,7 @@ color: #091E42;
         margin: 50px auto;
         gap: 20px;
         grid-template-columns: repeat(3, 1fr);
+        color: #fff;
     }
 
    
